# super.com

./: .gitignore  .mise.toml  CLAUDE.md  README.md  docker-compose.yaml  pyrightconfig.json
.claude/commands/sql-alchemy/: model.md
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_12_0025-0b58f6461c77_create_hotels_and_deals.py
backend/docs/: architecture.md  error-handling.md  testing.md
backend/playbook/: 0-interview-playbook.md  1-claude-md-explained.md  2-scaffold-deep-dives.md  2.1-fastapi-async-vs-sync.md  2.2-sqlalchemy-vs-activerecord-vs-prisma.md  2.3-alembic-vs-prisma-vs-rails.md  3-sqlalchemy-naming-conventions.md  4-case-insensitive-search.md  5-scaling-aggregation-queries.md  6-debugging-slow-queries.md  SCRIPT.md
backend/scripts/: pythonstartup.py
backend/src/app/: config.py  dependencies.py  exceptions.py  logging.py  main.py  middleware.py  models.py
backend/src/app/db/: session.py
backend/src/app/repositories/: deal.py
backend/src/app/routers/: deal.py
backend/src/app/schemas/: deal.py  error.py  pagination.py
backend/src/app/services/: deal.py
backend/tests/: conftest.py  factories.py  seeds.py  test_deals.py  test_models.py
docker/: init-test-db.sql
docs/: database.md  docker.md  fastapi.md  mypy.md  structlog.md  testing.md
frontend/: .stylelintrc.json  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  useURLParam.ts
scripts/hooks/: commit-msg
(+3 files in other folders)
